# s3-sdk-samples

./: .drone.yml  build.sh  makefile  readme  sdk.markdown
android/: 使用说明.docx
cpp/: CMakeLists.txt
cpp/src/: main.cpp
doc/: makefile  sdk.markdown
ios/SDK/AWSRuntime.framework/Versions/A/: AWSRuntime
ios/sample/S3_S3TransferManager/S3TransferManager/: Constants.h  Constants.m  S3TransferManagerAppDelegate.m  S3TransferManagerDownloadViewController.h  S3TransferManagerDownloadViewController.m  S3TransferManagerUploadViewController.h  S3TransferManagerUploadViewController.m
ios/sample/S3_S3TransferManager/S3TransferManager.xcodeproj/: project.pbxproj
ios/sample/S3_S3TransferManager/S3TransferManager.xcodeproj/project.xcworkspace/xcuserdata/justin.xcuserdatad/: UserInterfaceState.xcuserstate
ios/sample/S3_S3TransferManager/S3TransferManager.xcodeproj/xcuserdata/justin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/sample/S3_S3TransferManager/S3TransferManager.xcodeproj/xcuserdata/justin.xcuserdatad/xcschemes/: S3TransferManager.xcscheme  xcschememanagement.plist
java/: README.html  S3Sample.java  build.xml  sample.properties
java/lib/tmp/: builddef.lst
js/: package-lock.json  package.json  s3-sample.js
php/: README.rst  composer.json  composer.phar  sample-v2.php  sample.php
python/: S3Sample.py  S3Sample_boto3.py
